# daisy-embassy

./: Cargo.toml
examples/: dsp.rs  passthrough_faust.rs
examples/faust/simple-gain/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
examples/faust/simple-gain/.cargo/: config.toml
examples/faust/simple-gain/src/: faust.dsp  main.rs
